# rsmpc

./: Cargo.toml  README.md
src/: app.rs  config.rs  main.rs  state.rs  tui.rs  ui.rs
src/tui/: screens.rs
src/ui/: mod.rs  screens.rs  widgets.rs
