[package]
name = "rsmpc"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "A client for MPD"
repository = "https://github.com/scorpi4n/rsmpc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.14.0"
crossterm = "0.27.0"
dirs = "5.0.1"
mpd = "0.1.0"
ratatui = "0.28.0"
serde = "1.0.210"
subst = "0.3.5"
